--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -10,7 +10,8 @@
         "vi": "Tiếng Việt",
         "en": "Tiếng Anh",
         "free-service": "Nghe và tải nhạc miễn phí",
-        "search-plh": "Tìm kiếm nhạc, nghệ sĩ, album,..."
+        "search-plh": "Tìm kiếm nhạc, nghệ sĩ, album,...",
+        "welcome":"Xin chào"
     },
     "common": {
         "add": "Thêm",
