update redux for get role api

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -61,7 +61,7 @@
         "add": "Add new song",
         "image": "Image",
         "name": "Name",
-        "action": "action",
+        "action": "Actions",
         "title": "Song manage"
     }
 }
