--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -9,9 +9,11 @@
         "library": "Library",
         "vi": "Vietnamese",
         "en": "English",
-        "free-service": "Listen and download free",
+        "free-service": "Listen and download for free",
         "search-plh": "Search",
-        "welcome": "Welcome, "
+        "welcome": "Welcome, ",
+        "login":"Login",
+        "logout":"Logout"
     },
     "common": {
         "add": "Add",
@@ -58,11 +60,15 @@
         }
     },
     "manage-song": {
-        "add": "Add new song",
+        "add-title": "Add new song",
+        "add": "Add",
         "image": "Image",
         "name": "Name",
+        "source": "Source",
         "action": "Actions",
-        "title": "Song manage"
+        "title": "Song manage",
+        "cancel": "Cancel",
+        "upload-img":"Upload image"
     },
     "manage-user": {
         "add-title": "Create a new user",
@@ -77,5 +83,12 @@
         "role": "Role",
         "action": "Actions",
         "title": "User manage"
+    },
+    "nav":{
+        "profile":"Profile",
+        "home":"Home",
+        "liked":"Liked",
+        "playlists":"Play lists",
+        "search":"Search"
     }
 }
