--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -102,6 +102,7 @@
             "repeat": "Lặp lại"
         },
         "like": "Yêu thích",
-        "liked": "Đã thích"
+        "liked": "Đã thích",
+        "mute": "Tắt tiếng"
     }
 }
