--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -15,7 +15,7 @@
         "login": "Đăng nhập",
         "logout": "Đăng xuất",
         "register": "Tạo tài khoản mới",
-        "profile": "Cá nhân"
+        "profile": "Hồ sơ"
     },
     "common": {
         "add": "Thêm",
