--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -88,7 +88,8 @@
         "cancel": "Cancel",
         "upload-img": "Upload image",
         "createAt": "Create at",
-        "creator": "Creator"
+        "creator": "Creator",
+        "approve": "Approve"
     },
     "manage-user": {
         "add-title": "Create a new user",
